# builder-for-morphe

./: CONTRIBUTING.md  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/core/: builder.py  config.py  gh_utils.py  logger.py  network.py  patcher.py  prebuilts.py
src/scrapers/: apkmirror.py  github.py
